<resources>
    <string name="app_name">Navigation Component Tutorial</string>
    <string name="home_screen">Home Screen</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="ok">OK</string>
    <string name="settings_screen">Settings Screen</string>
    <string name="settings">Settings</string>
</resources>
